<resources>
    <string name="app_name">redditClone</string>
    <string name="topics">Topics</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_topic">Add Topic</string>
    <string name="add">Add</string>
    <string name="your_topic">your topic</string>
    <string name="are_you_sure_nyour_topic_won_t_be_saved">Are you sure?\nYour topic won\'t be saved</string>
    <string name="clear_draft">Clear Draft</string>
    <string name="cant_be_blank">Topic cannot be blank.</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="new_topic_added">New Topic Added</string>
</resources>
